force-app/main/default/objects/Contract/fields/Custom_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Custom_End_Date__c</fullName>
    <formula>TEXT(MONTH(EndDate)) + &quot;-&quot; + TEXT(DAY(EndDate))+ &quot;-&quot; + TEXT(YEAR(EndDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom End Date</label>
    <type>Text</type>
</CustomField>