force-app/main/default/objects/Contract/fields/DR_Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>DR_Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Primary Customer Contact)</relationshipLabel>
    <relationshipName>Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>