force-app/main/default/objects/Contract/fields/Entitlement_ID__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_ID__c</fullName>
    <label>Entitlement ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>