force-app/main/default/objects/Contract/fields/Hidden_PAK_Date_ID__c.field-meta.xml
<CustomField>
    <fullName>Hidden_PAK_Date_ID__c</fullName>
    <description>Link between SAP Order records, concat of PAK ID and End Date</description>
    <label>Hidden PAK Date ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>