force-app/main/default/objects/Contract/fields/LegacyRenewalQuotedDate__c.field-meta.xml
<CustomField>
    <fullName>LegacyRenewalQuotedDate__c</fullName>
    <formula>IF(
AND(SBQQ__RenewalQuoted__c=false, DATEVALUE(CreatedDate)&lt;DATE(2018, 9,28), NOT(ISNULL(EndDate))),
EndDate-120,Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy Renewal Quoted Date</label>
    <type>Date</type>
</CustomField>