force-app/main/default/objects/Contract/fields/NPN_Solution_Provider_VAR__c.field-meta.xml
<CustomField>
    <fullName>NPN_Solution_Provider_VAR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NPN Solution Provider/VAR</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>