force-app/main/default/objects/Contract/fields/Product_End_Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Product_End_Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product End Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>