force-app/main/default/objects/Contract/fields/Reseller_Contact__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reseller Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Reseller Contact)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>