force-app/main/default/objects/Contract/fields/Reseller_VAR__c.field-meta.xml
<CustomField>
    <fullName>Reseller_VAR__c</fullName>
    <formula>IF( ISBLANK (SBQQ__RenewalOpportunity__c ), 
  HYPERLINK(&quot;/&quot; +  SBQQ__Opportunity__r.NPN_Solution_Provider_VAR__c , SBQQ__Opportunity__r.NPN_Solution_Provider_VAR__r.Name),
  HYPERLINK(&quot;/&quot; + SBQQ__RenewalOpportunity__r.NPN_Solution_Provider_VAR__c, SBQQ__RenewalOpportunity__r.NPN_Solution_Provider_VAR__r.Name)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reseller (VAR)</label>
    <type>Text</type>
</CustomField>