force-app/main/default/objects/Contract/fields/SAP_PAK_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_PAK_ID__c</fullName>
    <label>SAP PAK ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>