force-app/main/default/objects/Contract/fields/Sold_To__c.field-meta.xml
<CustomField>
    <fullName>Sold_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Sold To)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>