force-app/main/default/objects/Contract/fields/Sold_To_Text__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Text__c</fullName>
    <formula>IF( ISBLANK (SBQQ__RenewalOpportunity__c ), 
  HYPERLINK(&quot;/&quot; +  SBQQ__Opportunity__r.Sold_To__c, SBQQ__Opportunity__r.Sold_To__r.Name),
  HYPERLINK(&quot;/&quot; + SBQQ__RenewalOpportunity__r.Sold_To__c, SBQQ__RenewalOpportunity__r.Sold_To__r.Name)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold To (Text)</label>
    <type>Text</type>
</CustomField>